=== HEAD

* Fix literalization of boolean values in filters on SQLite (jeremyevans)

* Add support for filtering and excluding by multiple associations (jeremyevans)

* Add support for inverting some SQL::Constant instances such as TRUE, FALSE, NULL, and NOTNULL (jeremyevans)

* Add support for excluding by associations to model datasets (jeremyevans)

* The Sequel::Postgres.use_iso_date_format setting now only affects future Database objects (jeremyevans)

* Add Sequel::Postgres::PG_NAMED_TYPES hash for extensions to register type conversions for non-standard types (jeremyevans, pvh)

* Make create_table? use IF NOT EXISTS instead of using SELECT to determine existence, if supported (jeremyevans)

* Fix bug in association_pks plugin when associated table has a different primary key column name (jfirebaugh)

* Fix limiting rows when connecting to DB2 (semmons99)

* Exclude columns from tables in the INFORMATION_SCHEMA when parsing table schema on JDBC (jeremyevans)

* Fix limiting rows when connecting to Microsoft Access (jeremyevans)

* Add Database#views for getting an array of symbols of view names for the database (jeremyevans, christian.michon)

* Make Datbase#tables no longer include view names on MySQL (jeremyevans)

* Convert Java CLOB objects to ruby strings when using the JDBC JTDS subadapter (christian.michon)

* If Thread#kill is called on a thread with an open transaction, roll the transaction back on ruby 1.8 and rubinius (jeremyevans)

* Split informix adapter into shared/specific parts, add JDBC informix subadapter (jeremyevans)

=== 3.23.0 (2011-05-02)

* Migrate issue tracker from Google Code to GitHub Issues (jeremyevans)

* Add support for filtering by associations to model datasets (jeremyevans)

* Don't call insert_select when saving a model that doesn't select all columns of the table (jeremyevans)

* Fix bug when using :select=>[] option for a many_to_many association (jeremyevans)
